# transaction-oxidizer

./: .gitignore  Cargo.toml  README.md
src/: account.rs  fixed_point.rs  input_output.rs  lib.rs  main.rs  transaction.rs
tests/: samples.rs
tests/data/: input_2.csv  input_3.csv  input_4.csv  input_5.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv
