[package]
name = "transaction-oxidizer"
version = "0.1.0"
authors = ["Diego Roig <2140622+diegopy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
csv = "1.1.6"
derive_more = "0.99.14"
env_logger = "0.8.3"
log = "0.4.14"
num-traits = "0.2.14"
rust_decimal = { version = "1.13.0", optional = true }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.24"
